--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A question and answer API with CRUD operations",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/david-commit/QandA-node-API#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.21"
