--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.21"
+  },
+  "devDependencies": {
+    "prisma": "^4.11.0"
   }
 }
